Swagger sample API
