# app/Domains/User/Entities/User.php
@@ -4,8 +4,23 @@ namespace App\Domains\User\Entities;
 
 use Illuminate\Foundation\Auth\User as Authenticatable;
 
+/**
+ *
+ * @SWG\Definition(required={"id", "name", "email", "password"})
+ * @property $id int
+ * @property $name string
+ * @property $email string
+ * @property $password string
+ */
 class User extends Authenticatable
 {
+    /**
+     * @SWG\Property(type="integer", format="int64", property="id")
+     * @SWG\Property(type="string", property="name")
+     * @SWG\Property(type="string", property="email")
+     * @SWG\Property(type="string", property="password")
+     */
+
     /**
      * The attributes that are mass assignable.
      *
